# json-pretty-print

./: .gitignore  LICENSE.md  README.org  hie.yaml  jpp  json-pp.cabal  stack.yaml
app/: Main.hs
src/: JSONPP.hs
