name:                json-pp
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JSONPP
  build-depends:       base >= 4.7 && < 5
                     , json
  default-language:    Haskell2010

executable jpp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , json
                     , json-pp
  default-language:    Haskell2010

